Se corrigieron inconsistencias en cliente, usuario, persona y rol